--- a/assets/css/include/footer.css
+++ b/assets/css/include/footer.css
@@ -63,7 +63,7 @@
     margin: 0 auto;
     padding: 2.5rem 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .content_footer2 {
@@ -72,8 +72,7 @@
     margin: 0 auto;
     padding: 2.5rem 0;
     display: flex;
-    justify-content: space-around;
-    justify-content: center;
+    justify-content: space-between;
 
 
 }
@@ -206,7 +205,7 @@ h4 {
 
 .content_footer2 img {
     width: 22px;
-    margin: 30%;
+    
 
 }
 
